i18n (models), using options_for_select + Helper to help with the array

--- a/config/locales/pt_Br.yml
+++ b/config/locales/pt_Br.yml
@@ -3,3 +3,8 @@
 
 "pt_Br":
   hello: "Chega mais!"
+  button:
+    new: "Criar novo Contato"
+    show: "Exibir"
+    edit: "Editar"
+    destroy: "Deletar"
